--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_room_speaker.xml
@@ -60,6 +60,22 @@
         app:layout_constraintTop_toBottomOf="@id/tvUserName"
         tools:ignore="SmallSp" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvHC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:drawableStart="@mipmap/ic_hc"
+        android:drawablePadding="2dp"
+        android:text="@string/ktv_chorus"
+        android:textColor="@color/white"
+        android:textSize="8sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvUserName"
+        tools:ignore="SmallSp" />
+
     <FrameLayout
         android:id="@+id/flVideoContainer"
         android:layout_width="match_parent"
