--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -62,7 +62,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <io.agora.scene.ktv.widget.GradeView
+            <io.agora.scene.ktv.widget.lrcView.GradeView
                 android:id="@+id/grade_view"
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
