--- a/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
+++ b/Android/app/src/main/res/menu/app_bottom_nav_menu.xml
@@ -8,6 +8,7 @@
 
     <item
         android:id="@+id/navigation_dashboard"
+        android:visible="false"
         android:icon="@drawable/btn_home_faxian_selector"
         android:title="@string/app_title_find" />
 
