--- a/Android/app/src/main/res/values-w600dp/dimens.xml
+++ b/Android/app/src/main/res/values-w600dp/dimens.xml
@@ -1,4 +1,4 @@
 <resources>
-    <dimen name="fab_margin">48dp</dimen>
-    <dimen name="text_margin">48dp</dimen>
+    <dimen name="app_fab_margin">48dp</dimen>
+    <dimen name="app_text_margin">48dp</dimen>
 </resources>
