fixn ntp sync and update sdk version

--- a/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_dialog_more.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="64dp"
         android:background="@drawable/bg_round_black"
         android:src="@mipmap/ic_bel_canto"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iBtnEffectVoice"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +40,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/ktv_beauty_voice"
         android:textColor="@color/def_text_grey_6c7"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/iBtnBeautyVoice"
         app:layout_constraintStart_toStartOf="@id/iBtnBeautyVoice"
         app:layout_constraintTop_toBottomOf="@id/iBtnBeautyVoice" />
@@ -47,12 +49,14 @@
         android:id="@+id/iBtnEffectVoice"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginBottom="64dp"
         android:background="@drawable/bg_round_black"
         android:src="@mipmap/ic_beauty_voice"
-        app:layout_constraintBottom_toBottomOf="@id/iBtnBeautyVoice"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iBtnMV"
-        app:layout_constraintStart_toEndOf="@id/iBtnBeautyVoice"
-        app:layout_constraintTop_toTopOf="@id/iBtnBeautyVoice" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
@@ -68,12 +72,13 @@
         android:id="@+id/iBtnMV"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginTop="68dp"
         android:background="@drawable/bg_round_black"
         android:src="@mipmap/ic_camera_on"
-        app:layout_constraintBottom_toBottomOf="@id/iBtnBeautyVoice"
+        app:layout_constraintBottom_toBottomOf="@id/iBtnEffectVoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iBtnEffectVoice"
-        app:layout_constraintTop_toTopOf="@id/iBtnBeautyVoice" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
