--- a/Android/app/src/main/res/layout/app_activity_about_us.xml
+++ b/Android/app/src/main/res/layout/app_activity_about_us.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
